--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -6,9 +6,8 @@
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-inline'"
     />
-    <title>Hello Electron React!</title>
+    <title>akiva</title>
   </head>
-  <body>
     <div id="root"></div>
   </body>
 </html>
